# compression_project

./: .gitignore  README.md  benchmark.sh  benchmark_report.md
.github/workflows/: docker.yml
js-compressor/: Dockerfile  cli.js  help.js  index.js  lz.js  package-lock.json  package.json  rle.js
js-compressor/test/: lz.test.js  rle.test.js
rust-compressor/: Cargo.toml  Dockerfile  output.txt
rust-compressor/src/: do_lz.rs  do_rle.rs  lib.rs  lz.rs  main.rs  rle.rs
wasm-compressor/: Cargo.toml
wasm-compressor/src/: lib.rs
