[package]
name = "compression"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compression"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
infer = "0.15"  # For file type detection
anyhow = "1.0.75"  # For error handling
glob = "0.3.1"

[dev-dependencies]